# jugnoo

./: Makefile  README.md  activity.pyx  cell.py  cluster_cells.py  compute_cells.py  compute_cells_network.py  config.py  contour_detection.py  dependencies.txt  df_by_f_plotter.py  df_by_f_plotter_50.py  edge_detector.py  environment.py  generate_community.py  generate_correlation_graph.py  helper.py  image_reader.py  jugnoo.py  locate_roi.py  locate_roi_manually.py  main.py  motion_correct.py  neuron_locator.py  plot_cell_activity.py  roi.py  run  run.sh  tiffs2numpy.py
image_analysis/: edge_detector.py  frame_reader.py
jugnoo/: CMakeLists.txt  build_me.sh  main.cpp  process_data.py  run.sh
jugnoo/cmake_modules/: FindOPENCV.cmake
jugnoo/core/: CMakeLists.txt  methods.cpp  methods.h
jugnoo/include/: core.h  global.h
jugnoo/src/: main.cpp
